WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133320
[GTK] Adds implementation of subtle crypto HMAC algorithm
https://bugs.webkit.org/show_bug.cgi?id=133320
Summary
[GTK] Adds implementation of subtle crypto HMAC algorithm
Eduardo Lima Mitev
Reported
2014-05-27 12:29:34 PDT
[GTK] Adds implementation of subtle crypto HMAC algorithm
Attachments
Patch
(4.81 KB, patch)
2014-05-27 12:45 PDT
,
Eduardo Lima Mitev
no flags
Details
Formatted Diff
Diff
Patch
(35.57 KB, patch)
2014-05-28 03:10 PDT
,
Eduardo Lima Mitev
no flags
Details
Formatted Diff
Diff
Patch
(4.81 KB, patch)
2014-05-28 03:40 PDT
,
Eduardo Lima Mitev
no flags
Details
Formatted Diff
Diff
Patch
(6.32 KB, patch)
2014-08-13 02:39 PDT
,
Eduardo Lima Mitev
no flags
Details
Formatted Diff
Diff
Patch
(6.26 KB, patch)
2014-09-23 07:43 PDT
,
Eduardo Lima Mitev
no flags
Details
Formatted Diff
Diff
Patch
(6.17 KB, patch)
2014-09-23 08:55 PDT
,
Eduardo Lima Mitev
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Eduardo Lima Mitev
Comment 1
2014-05-27 12:45:04 PDT
Created
attachment 232145
[details]
Patch
Eduardo Lima Mitev
Comment 2
2014-05-27 12:48:05 PDT
Adding dependency on
bug 133316
and
bug 133317
.
Eduardo Lima Mitev
Comment 3
2014-05-28 03:10:35 PDT
Created
attachment 232183
[details]
Patch
Eduardo Lima Mitev
Comment 4
2014-05-28 03:40:50 PDT
Created
attachment 232188
[details]
Patch
Eduardo Lima Mitev
Comment 5
2014-08-13 02:39:17 PDT
Created
attachment 236507
[details]
Patch
WebKit Commit Bot
Comment 6
2014-08-13 02:40:41 PDT
Attachment 236507
[details]
did not pass style-queue: ERROR: Source/WebCore/crypto/gtk/CryptoAlgorithmHMACGtk.cpp:34: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Philippe Normand
Comment 7
2014-09-22 02:20:29 PDT
Comment on
attachment 236507
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=236507&action=review
Looks good! Only a small nit to fix, I think
> Source/WebCore/crypto/gtk/CryptoAlgorithmHMACGtk.cpp:99 > + callback(result);}
Is this a spurious curly brace?
Eduardo Lima Mitev
Comment 8
2014-09-23 07:43:42 PDT
Created
attachment 238540
[details]
Patch
WebKit Commit Bot
Comment 9
2014-09-23 07:45:25 PDT
Attachment 238540
[details]
did not pass style-queue: ERROR: Source/WebCore/crypto/gtk/CryptoAlgorithmHMACGtk.cpp:34: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 10
2014-09-23 08:29:24 PDT
Comment on
attachment 238540
[details]
Patch Rejecting
attachment 238540
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 238540, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: /git.webkit.org/WebKit a45428a..f931c1e master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 173871 = a45428ae254d923e5c28643f3328a338c0c90ddc
r173872
= f931c1ee8604471d4f672c8451fd6c8fa160443e Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output:
http://webkit-queues.appspot.com/results/4735183215394816
Philippe Normand
Comment 11
2014-09-23 08:43:37 PDT
Needs a rebase
Eduardo Lima Mitev
Comment 12
2014-09-23 08:55:01 PDT
Created
attachment 238542
[details]
Patch
WebKit Commit Bot
Comment 13
2014-09-23 08:57:39 PDT
Attachment 238542
[details]
did not pass style-queue: ERROR: Source/WebCore/crypto/gtk/CryptoAlgorithmHMACGtk.cpp:34: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 14
2014-09-23 09:41:52 PDT
Comment on
attachment 238542
[details]
Patch Clearing flags on attachment: 238542 Committed
r173874
: <
http://trac.webkit.org/changeset/173874
>
WebKit Commit Bot
Comment 15
2014-09-23 09:41:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug