[GTK] Adds implementation of subtle crypto HMAC algorithm https://bugs.webkit.org/show_bug.cgi?id=133320

Patch by Eduardo Lima Mitev <elima@igalia.com> on 2014-09-23
Reviewed by Philippe Normand.

Source/WebCore:

Tests are already in place under crypto/subtle/hmac-*.html

* crypto/gtk/CryptoAlgorithmHMACGtk.cpp:
(WebCore::getGnutlsDigestAlgorithm):
(WebCore::calculateSignature):
(WebCore::CryptoAlgorithmHMAC::platformSign):
(WebCore::CryptoAlgorithmHMAC::platformVerify):

LayoutTests:

* platform/gtk/TestExpectations: Whitelists HMAC related tests that are passing

Canonical link: https://commits.webkit.org/154849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173874 268f45cc-cd09-0410-ab3c-d52691b4dbfc